<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="activity_main_name">Playlist maker</string>
    <string name="button_search_text">Поиск</string>
    <string name="button_library_text">Медиатека</string>
    <string name="activity_settings_name">Настройки</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="dark_theme_text">Темная тема</string>
    <string name="support_text">Написать в поддержку</string>
    <string name="user_agreement_text">Пользовательское соглашение</string>
    <string name="link_to_android_developer_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="my_email">derisheff2014@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link_to_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="activity_search_name">Поиск</string>
    <string name="nothing_searched_text">Ничего не нашлось</string>
    <string name="connection_lost_text">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button_text">Очистить историю</string>
    <string name="default_track_current_time">00:00</string>
    <string name="track_time_text">Длительность</string>
    <string name="track_album_text">Альбом</string>
    <string name="track_date_text">Год</string>
    <string name="track_genre_text">Жанр</string>
    <string name="track_country_text">Страна</string>
    <string name="update_button_text">Обновить</string>
</resources>