<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_main_container_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/activity_main_name"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_main_activity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_main_activity_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MainActivityButtonStyle"
        android:text="@string/button_search_text"
        app:icon="@drawable/ic_search"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/activity_main_toolbar"
        app:layout_constraintBottom_toTopOf="@id/button_library"
        app:layout_constraintStart_toStartOf="@id/left_main_activity_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_main_activity_guideline"
        android:layout_marginTop="@dimen/_24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_library"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MainActivityButtonStyle"
        android:text="@string/button_library_text"
        app:icon="@drawable/ic_library"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        app:layout_constraintBottom_toTopOf="@id/button_settings"
        app:layout_constraintStart_toStartOf="@id/left_main_activity_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_main_activity_guideline"
        android:layout_marginTop="@dimen/_16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/MainActivityButtonStyle"
        android:text="@string/activity_settings_name"
        app:icon="@drawable/ic_settings"
        app:layout_constraintTop_toBottomOf="@id/button_library"
        app:layout_constraintStart_toStartOf="@id/left_main_activity_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_main_activity_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/_28dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>