<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_settings_color"
    android:id="@+id/settings"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/panel_header"
        android:padding="4dp">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_gravity="center"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/settings_text"
            android:textSize="@dimen/headers_text_size"
            android:gravity="center"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/activity_settings_text_color"
            android:id="@+id/panel_header_title"
            android:layout_marginTop="10dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme_text"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/activity_settings_text_color"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp">
        </TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="10"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="6dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_text"
            android:textColor="@color/activity_settings_text_color"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp">
        </TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_text"
            android:textColor="@color/activity_settings_text_color"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp">
        </TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement_text"
            android:textColor="@color/activity_settings_text_color"
            android:textSize="@dimen/regular_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="21dp">
        </TextView>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>
</LinearLayout>