<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical"
    android:background="@color/activity_search_container_color"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/activity_search_name"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:titleTextColor="@color/activity_settings_text_color"
        app:navigationIcon="@drawable/ic_arrow_back"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:background="@drawable/search_field_background"
        android:layout_marginHorizontal="@dimen/regular_horizontal_indent"
        android:layout_marginVertical="@dimen/small_vertical_indent"
        android:paddingHorizontal="@dimen/small_horizontal_indent">

        <EditText
            android:id="@+id/query_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/activity_search_name"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/regular_text_size"
            android:textFontWeight="400"
            android:drawableStart="@drawable/ic_search"
            android:drawableTint="@color/activity_search_icons_color"
            android:drawablePadding="8dp"
            android:background="@android:color/transparent"
            android:textColor="@color/activity_search_text_color"
            android:textColorHint="@color/activity_search_icons_color"
            android:textCursorDrawable="@drawable/cursor"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_search_icon_regular_dimen"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_clear"
            app:tint="@color/activity_search_icons_color"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nothing_searched_placeholder"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/error_placeholder_margin"
        android:paddingHorizontal="@dimen/error_placeholder_padding"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nothing_searched"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/placeholder_text_size"
            android:textFontWeight="400"
            android:textColor="@color/activity_settings_text_color"
            android:text="@string/nothing_searched_text"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connection_lost_placeholder"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/error_placeholder_margin"
        android:paddingHorizontal="@dimen/error_placeholder_padding"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connection_lost"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/placeholder_text_size"
            android:textFontWeight="400"
            android:textColor="@color/activity_settings_text_color"
            android:text="@string/connection_lost_text"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_track_list_button"
            app:cornerRadius="54dp"
            android:backgroundTint="@color/activity_settings_text_color"
            android:text="Обновить"
            android:textAllCaps="false"
            android:textColor="@color/activity_settings_container_color"
            android:textFontWeight="500"
            android:textSize="@dimen/_14sp"
            android:fontFamily="@font/ys_display_medium"
            android:layout_marginTop="@dimen/error_placeholder_padding"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searched_track_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>