<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_player_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/ToolbarAppearance"
            app:titleTextColor="@color/activity_settings_text_color"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_player_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_player_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_24dp"/>

        <ImageView
            android:id="@+id/track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintTop_toBottomOf="@+id/activity_player_toolbar"
            app:layout_constraintStart_toStartOf="@id/left_player_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_player_guideline"
            android:layout_marginTop="@dimen/_26dp"
            tools:src="@drawable/album"/>

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/track_image"
            app:layout_constraintStart_toStartOf="@id/left_player_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_player_guideline"
            android:layout_marginTop="@dimen/_24dp"
            android:textSize="@dimen/headers_text_size"
            android:textFontWeight="400"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/activity_settings_text_color"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/track_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            app:layout_constraintStart_toStartOf="@id/left_player_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_player_guideline"
            android:layout_marginTop="@dimen/_12dp"
            android:textSize="@dimen/_14sp"
            android:textFontWeight="400"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/activity_settings_text_color"
            tools:text="The Beatles "/>

        <ImageView
            android:id="@+id/add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/left_player_guideline"
            app:layout_constraintEnd_toStartOf="@id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:src="@drawable/ic_button_add_to_playlist"
            android:backgroundTint="@android:color/transparent" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/track_artist"
            app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
            app:layout_constraintEnd_toStartOf="@id/add_to_favourites_button"
            android:layout_marginTop="@dimen/_36dp"
            android:src="@drawable/ic_button_play"
            android:backgroundTint="@android:color/transparent"
            />

        <ImageView
            android:id="@+id/add_to_favourites_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/play_button"
            app:layout_constraintEnd_toEndOf="@id/right_player_guideline"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            android:src="@drawable/ic_button_add_to_favourites"
            android:backgroundTint="@android:color/transparent"/>

        <TextView
            android:id="@+id/current_playtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textFontWeight="500"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/default_track_current_time"
            android:textSize="@dimen/_14sp"
            android:textAlignment="center"
            android:textColor="@color/player_description_text_color_values"
            app:layout_constraintTop_toBottomOf="@id/play_button"
            app:layout_constraintStart_toStartOf="@id/left_player_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_player_guideline"
            android:layout_marginTop="@dimen/_12.33"
            tools:text="0:30"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_description_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_description_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16dp"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/descriptionFieldsBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="descriptionField"
            app:barrierDirection="end" />

        <TextView
            android:id="@+id/track_time"
            app:layout_constraintTag="descriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/current_playtime"
            app:layout_constraintStart_toStartOf="@id/left_description_guideline"
            android:layout_marginTop="@dimen/_39dp"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color"
            android:text="@string/track_time_text"
            tools:text="Длительность"/>

        <TextView
            android:id="@+id/track_time_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/track_time"
            app:layout_constraintStart_toEndOf="@id/descriptionFieldsBarrier"
            app:layout_constraintEnd_toEndOf="@id/right_description_guideline"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color_values"
            android:textAlignment="textEnd"
            tools:text="5:35"/>

        <TextView
            android:id="@+id/track_album"
            app:layout_constraintTag="descriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/track_time"
            app:layout_constraintStart_toStartOf="@id/left_description_guideline"
            android:layout_marginTop="@dimen/_17dp"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color"
            android:text="@string/track_album_text"
            tools:text="Альбом"/>

        <TextView
            android:id="@+id/track_album_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/track_album"
            app:layout_constraintStart_toEndOf="@id/descriptionFieldsBarrier"
            app:layout_constraintEnd_toEndOf="@id/right_description_guideline"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color_values"
            android:textAlignment="textEnd"
            tools:text="Yesterday (Remastered 2009)"/>

        <TextView
            android:id="@+id/track_date"
            app:layout_constraintTag="descriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/track_album_value"
            app:layout_constraintStart_toStartOf="@id/left_description_guideline"
            android:layout_marginTop="@dimen/_17dp"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color"
            android:text="@string/track_date_text"
            tools:text="Год"/>

        <TextView
            android:id="@+id/track_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/track_date"
            app:layout_constraintStart_toEndOf="@id/descriptionFieldsBarrier"
            app:layout_constraintEnd_toEndOf="@id/right_description_guideline"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color_values"
            android:textAlignment="textEnd"
            tools:text="1965"/>

        <TextView
            android:id="@+id/track_genre"
            app:layout_constraintTag="descriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/track_date"
            app:layout_constraintStart_toStartOf="@id/left_description_guideline"
            android:layout_marginTop="@dimen/_17dp"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color"
            android:text="@string/track_genre_text"
            tools:text="Жанр"/>

        <TextView
            android:id="@+id/track_genre_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/track_genre"
            app:layout_constraintStart_toEndOf="@id/descriptionFieldsBarrier"
            app:layout_constraintEnd_toEndOf="@id/right_description_guideline"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color_values"
            android:textAlignment="textEnd"
            tools:text="Rock"/>

        <TextView
            android:id="@+id/track_country"
            app:layout_constraintTag="descriptionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/track_genre_value"
            app:layout_constraintStart_toStartOf="@id/left_description_guideline"

            android:layout_marginTop="@dimen/_17dp"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color"
            android:text="@string/track_country_text"
            tools:text="Страна"/>

        <TextView
            android:id="@+id/track_country_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/track_country"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_20dp"
            app:layout_constraintStart_toEndOf="@id/descriptionFieldsBarrier"
            app:layout_constraintEnd_toEndOf="@id/right_description_guideline"
            style="@style/PlayerDescriptionTextStyle"
            android:textColor="@color/player_description_text_color_values"
            android:textAlignment="textEnd"
            tools:text="Великобритания"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>